--- a/.github/workflows/notebook-deployment.yml
+++ b/.github/workflows/notebook-deployment.yml
@@ -13,7 +13,7 @@ on:
         default: 'main'
 jobs:
   databricks-dev:
-    name: Terraform Plan
+    name: databricks dev
     runs-on: ubuntu-latest
     environment:
       name: dev
@@ -23,9 +23,9 @@ jobs:
         uses: "actions/checkout@v4"
       # notebook deployment
       - name: Deploy Notebooks
-        uses: databricks/databricks-actions@v1
+        uses: microsoft/databricks-import-notebook@v1.0.0
         with:
-          host: ${{ secrets.DATABRICKS_HOST }}
-          token: ${{ secrets.DATABRICKS_TOKEN }}
-          path: /Workspace/Notebooks/databricks-cicd
+          databricks-host: ${{ secrets.DATABRICKS_HOST }}
+          databricks-token: ${{ secrets.DATABRICKS_TOKEN }}
+          remote-path: /Workspace/Notebooks/databricks-cicd
           local-path: ${{ github.workspace }}/databricks-cicd
