--- a/.github/workflows/notebook-deployment.yml
+++ b/.github/workflows/notebook-deployment.yml
@@ -21,6 +21,8 @@ jobs:
       # Checkout the repository
       - name: Checkout
         uses: "actions/checkout@v4"
+      - name: install-databricks-cli
+        uses: microsoft/install-databricks-cli@v1.0.0
       # notebook deployment
       - name: Deploy Notebooks
         uses: microsoft/databricks-import-notebook@v1.0.0
